Diary Function Complete

--- a/Views/Diary/Delete.cshtml
+++ b/Views/Diary/Delete.cshtml
@@ -20,14 +20,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DailyContent)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DailyContent)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.CreatedAt)
         </dt>
 
@@ -44,19 +36,15 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Image)
+            @Html.DisplayNameFor(model => model.DailyContent)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Image)
+            @Html.DisplayFor(model => model.DailyContent)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.User.Name)
-        </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.User.Name)
+            <img src="~/Content/Images/@Html.DisplayFor(model => model.Image)" alt="" />
         </dd>
 
     </dl>
